{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 3742,
  "lineage": "e61adeb0-4def-0f80-aa26-1c7e740e0336",
  "resources": [
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing_rds_security_group",
      "provider": "module.rds.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216987438199:security-group/sg-05bec69fadb60911b",
            "description": "Allow the RDS to receive traffic from EC2 instances and DigitalOcean",
            "filter": null,
            "id": "sg-05bec69fadb60911b",
            "name": "RDS Inbount \u0026 Outbound",
            "tags": {
              "Name": "RDS Inbout \u0026 Outbound"
            },
            "vpc_id": "vpc-24d08740"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216987438199:vpc/vpc-08a34aad39a4de1ff",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06e15ed74eb5b75f7",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-bc208cd9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08a34aad39a4de1ff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-042186296e77a4917",
            "owner_id": "216987438199",
            "state": "available",
            "tags": {
              "Name": "PersonalFinance"
            }
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.personal_finance",
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:loadbalancer/app/personal-finance/7980a5c8b41697b3",
            "arn_suffix": "app/personal-finance/7980a5c8b41697b3",
            "dns_name": "personal-finance-930553969.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:loadbalancer/app/personal-finance/7980a5c8b41697b3",
            "idle_timeout": 600,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "personal-finance",
            "security_groups": [
              "sg-059b741854e7b25a6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0846527a1ed8f23c2"
              },
              {
                "subnet_id": "subnet-0e3b7ba9e0ec8cd16"
              }
            ],
            "subnets": [
              "subnet-0846527a1ed8f23c2",
              "subnet-0e3b7ba9e0ec8cd16"
            ],
            "tags": {
              "Name": "personal-finance"
            },
            "vpc_id": "vpc-08a34aad39a4de1ff",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.sg_for_alb"
          ]
        }
      ]
    },
    {
      "module": "module.personal_finance",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http_traffic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:listener/app/personal-finance/7980a5c8b41697b3/3c2f612ddbd7ed70",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:listener/app/personal-finance/7980a5c8b41697b3/3c2f612ddbd7ed70",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:loadbalancer/app/personal-finance/7980a5c8b41697b3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main"
          ]
        }
      ]
    },
    {
      "module": "module.personal_finance",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https_traffic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:listener/app/personal-finance/7980a5c8b41697b3/220285c7e479b253",
            "certificate_arn": "arn:aws:acm:eu-west-1:216987438199:certificate/a4816efa-9c79-4041-ace4-70628d07b10a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:targetgroup/personal-finance-frontend/56a7c1cc2c5f6e68",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:listener/app/personal-finance/7980a5c8b41697b3/220285c7e479b253",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:loadbalancer/app/personal-finance/7980a5c8b41697b3",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_acm_certificate_validation.cert",
            "aws_alb.main",
            "aws_alb_target_group.target_group_frontend"
          ]
        }
      ]
    },
    {
      "module": "module.personal_finance",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:targetgroup/personal-finance-backend/e1a854cebb7fd65a",
            "arn_suffix": "targetgroup/personal-finance-backend/e1a854cebb7fd65a",
            "deregistration_delay": 15,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/robots.txt",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:targetgroup/personal-finance-backend/e1a854cebb7fd65a",
            "lambda_multi_value_headers_enabled": false,
            "name": "personal-finance-backend",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "personal-finance"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08a34aad39a4de1ff"
          },
          "depends_on": [
            "aws_alb.main"
          ]
        }
      ]
    },
    {
      "module": "module.personal_finance",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group_frontend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:targetgroup/personal-finance-frontend/56a7c1cc2c5f6e68",
            "arn_suffix": "targetgroup/personal-finance-frontend/56a7c1cc2c5f6e68",
            "deregistration_delay": 15,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:targetgroup/personal-finance-frontend/56a7c1cc2c5f6e68",
            "lambda_multi_value_headers_enabled": false,
            "name": "personal-finance-frontend",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "personal-finance"
            },
            "target_type": "ip",
            "vpc_id": "vpc-08a34aad39a4de1ff"
          },
          "depends_on": [
            "aws_alb.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-025309a9300987a2e",
            "domain": "vpc",
            "id": "eipalloc-0e855d5ff33539885",
            "network_interface": "eni-0cbd05da1e9deb0e4",
            "private_dns": "ip-10-0-101-22.eu-west-1.compute.internal",
            "private_ip": "10.0.101.22",
            "public_dns": "ec2-34-255-175-47.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.175.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "PersonalFinance"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bee2d2773d11b4da",
            "owner_id": "216987438199",
            "tags": {
              "Name": "PersonalFinance"
            },
            "vpc_id": "vpc-08a34aad39a4de1ff"
          }
        }
      ]
    },
    {
      "module": "module.personal_finance",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:targetgroup/personal-finance-backend/e1a854cebb7fd65a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:listener-rule/app/personal-finance/7980a5c8b41697b3/220285c7e479b253/43ae0aee43b50409",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "/v1/*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:listener-rule/app/personal-finance/7980a5c8b41697b3/220285c7e479b253/43ae0aee43b50409",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:216987438199:listener/app/personal-finance/7980a5c8b41697b3/220285c7e479b253",
            "priority": 100
          },
          "depends_on": [
            "aws_alb_listener.https_traffic",
            "aws_alb_target_group.target_group_backend"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e855d5ff33539885",
            "id": "nat-0008f922bcc35edda",
            "network_interface_id": "eni-0cbd05da1e9deb0e4",
            "private_ip": "10.0.101.22",
            "public_ip": "34.255.175.47",
            "subnet_id": "subnet-0e3b7ba9e0ec8cd16",
            "tags": {
              "Name": "PersonalFinance"
            }
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eb25b581ac650ffd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0008f922bcc35edda",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eb25b581ac650ffd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bee2d2773d11b4da",
            "id": "r-rtb-0ad6cfcd0ea61bdb41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ad6cfcd0ea61bdb4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.this[0]",
            "aws_route_table.public[0]"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eb25b581ac650ffd",
            "owner_id": "216987438199",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0008f922bcc35edda",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PersonalFinance"
            },
            "vpc_id": "vpc-08a34aad39a4de1ff"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ad6cfcd0ea61bdb4",
            "owner_id": "216987438199",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bee2d2773d11b4da",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PersonalFinance"
            },
            "vpc_id": "vpc-08a34aad39a4de1ff"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079b14f90d5dd2130",
            "route_table_id": "rtb-0eb25b581ac650ffd",
            "subnet_id": "subnet-083b7c29b782bf81a"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc648525751d48c1",
            "route_table_id": "rtb-0eb25b581ac650ffd",
            "subnet_id": "subnet-0a56504e3bc825661"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bc4bd0c338f9805",
            "route_table_id": "rtb-0ad6cfcd0ea61bdb4",
            "subnet_id": "subnet-0e3b7ba9e0ec8cd16"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01311c1ec84059470",
            "route_table_id": "rtb-0ad6cfcd0ea61bdb4",
            "subnet_id": "subnet-0846527a1ed8f23c2"
          },
          "depends_on": [
            "aws_route_table.public[0]",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.personal_finance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216987438199:security-group/sg-059b741854e7b25a6",
            "description": "A security group for the Application Load Balancer. Allows HTTP traffic in",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059b741854e7b25a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "personal-finance_sg_for_alb20190826144716935700000004",
            "name_prefix": "personal-finance_sg_for_alb",
            "owner_id": "216987438199",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "personal-finance"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a34aad39a4de1ff"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_ec2_instances",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216987438199:security-group/sg-00e34abaaac91e4ec",
            "description": "Security group for EC2 instances within the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e34abaaac91e4ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-059b741854e7b25a6"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "PersonalFinance_sg_for_ec2_instances_20190826145030082400000001",
            "name_prefix": "PersonalFinance_sg_for_ec2_instances_",
            "owner_id": "216987438199",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PersonalFinance"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a34aad39a4de1ff"
          },
          "depends_on": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.personal_finance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_ecs_apps",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216987438199:security-group/sg-04f0648d5ae0bd17a",
            "description": "Security group that allows incoming HTTP/HTTPS traffic and ALB traffic to the ECS tasks within the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f0648d5ae0bd17a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-059b741854e7b25a6"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "personal-finance_sg_for_ecs_apps_20190826144720736700000005",
            "name_prefix": "personal-finance_sg_for_ecs_apps_",
            "owner_id": "216987438199",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "personal-finance"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a34aad39a4de1ff"
          },
          "depends_on": [
            "aws_security_group.sg_for_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_traffic_to_apps",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1456453107",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00e34abaaac91e4ec",
            "self": false,
            "source_security_group_id": "sg-059b741854e7b25a6",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "module.ecs_cluster",
            "module.personal_finance"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress_all",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1659289765",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00e34abaaac91e4ec",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.sg_for_ec2_instances"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_in",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4137479914",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e34abaaac91e4ec",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.sg_for_ec2_instances"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_in",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1157644407",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e34abaaac91e4ec",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.sg_for_ec2_instances"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_nat_gateway_to_rds",
      "provider": "module.rds.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "34.255.175.47/32"
            ],
            "description": "Allow traffic from ECS cluster",
            "from_port": 3306,
            "id": "sgrule-3736418424",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05bec69fadb60911b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "depends_on": [
            "data.aws_security_group.existing_rds_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "module.ecs_cluster.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1075229535",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e34abaaac91e4ec",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.sg_for_ec2_instances"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216987438199:subnet/subnet-083b7c29b782bf81a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-083b7c29b782bf81a",
            "map_public_ip_on_launch": false,
            "owner_id": "216987438199",
            "tags": {
              "Name": "PersonalFinance"
            },
            "vpc_id": "vpc-08a34aad39a4de1ff"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216987438199:subnet/subnet-0a56504e3bc825661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a56504e3bc825661",
            "map_public_ip_on_launch": false,
            "owner_id": "216987438199",
            "tags": {
              "Name": "PersonalFinance"
            },
            "vpc_id": "vpc-08a34aad39a4de1ff"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216987438199:subnet/subnet-0e3b7ba9e0ec8cd16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0e3b7ba9e0ec8cd16",
            "map_public_ip_on_launch": true,
            "owner_id": "216987438199",
            "tags": {
              "Name": "PersonalFinance"
            },
            "vpc_id": "vpc-08a34aad39a4de1ff"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216987438199:subnet/subnet-0846527a1ed8f23c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0846527a1ed8f23c2",
            "map_public_ip_on_launch": true,
            "owner_id": "216987438199",
            "tags": {
              "Name": "PersonalFinance"
            },
            "vpc_id": "vpc-08a34aad39a4de1ff"
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216987438199:vpc/vpc-08a34aad39a4de1ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005e289038872ac24",
            "default_route_table_id": "rtb-042186296e77a4917",
            "default_security_group_id": "sg-0d12928873bbda4ee",
            "dhcp_options_id": "dopt-bc208cd9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08a34aad39a4de1ff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-042186296e77a4917",
            "owner_id": "216987438199",
            "tags": {
              "Name": "PersonalFinance"
            }
          }
        }
      ]
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.ecs_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "module.ecs_cluster.provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}